# stringdiagrams

./: .gitignore  BasicDiagram.hs  BrickDiagram.hs  CHANGELOG.md  PointDiagram.hs  example.json  script.sh  stringdiagrams.cabal
app/: Main.hs
src/: BrickDiagrams.hs  StringDiagrams.hs
src/StringDiagrams/: BrickWrapper.hs  DiagramTypes.hs  Draw.hs  MonCatDiagram.hs  MonCatWrapper.hs  Read.hs  SimpleDraw.hs  Types.hs
src/StringDiagrams/Draw/: BrickDiagram.hs  BrickWrapper.hs  LabelsDiagram.hs  MatrixDiagram.hs  NaiveDiagram.hs  OutputDiagram.hs  StringDiagram.hs  WireDiagram.hs  WiresDiagram.hs
test/: Main.hs  discopy.ipynb  generate.ipynb  hh19.json  mat.json  simple.json  test58.json
