cabal-version:      3.0
name:               stringdiagrams
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
homepage:           https://github.com/celrm/stringdiagrams
license:            NONE
author:             Celia Rubio
maintainer:         celia_rubio@hotmail.es
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- copyright:
-- synopsis:
-- description:

common shared-properties
    ghc-options:      -Wall
    default-language: Haskell2010
    build-depends:    
        base(>=4.8 && <4.19),
        diagrams-lib(>=1.4 && <1.5),
        diagrams-svg,
        safe, aeson, bytestring, 
        containers(>0.4 && <0.7)

library
    import:           shared-properties
    hs-source-dirs:   src
    exposed-modules:  
        StringDiagrams.Read,
        StringDiagrams.Draw,
        StringDiagrams.BrickWrapper,
        StringDiagrams.Draw.NaiveDiagram,
        StringDiagrams.Draw.WiresDiagram,
        StringDiagrams.Draw.LabelsDiagram,

executable stringdiagrams
    import:           shared-properties
    build-depends:    stringdiagrams
    hs-source-dirs:   app
    main-is:          Main.hs

test-suite stringdiagrams-test
    import:           shared-properties
    build-depends:    stringdiagrams, directory, filepath

    hs-source-dirs:   test
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
